<resources>
    <string name="app_name">MinTurassistent</string>
    <string name="brukernavn">Brukernavn</string>
    <string name="passord">Passord</string>
    <string name="login">Logg inn</string>
    <string name="glemt_passord">Glemt passord</string>
    <string name="registrere">Registrer deg</string>
    <string name="epost">Epost</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_velkommen">Velkommen til vår app: Min TurAssistent</string>
    <string name="str_nytur">Velg ny tur fra bunnmeny…</string>
    <string name="str_madeby">Laget av:</string>
    <string name="str_madeby1">Are Abrahamsen, Jørgen Rypdal</string>
    <string name="str_madeby2">og Halil Ibrahim Keser</string>
    <string name="todo">Bilde description</string>
    <string name="todo1">Bilde description</string>
    <string name="trips">Mine turer:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="str_ny_tur">Ny tur</string>
    <string name="str_mine_turer">Mine turer</string>
    <string name="str_innstillinger">Innstillinger</string>
    <string name="str_min_profil">Min profil</string>
    <string name="hei_bruker">Hei bruker:</string>
    <string name="slett_bruker">Slett bruker</string>
    <string name="logg_ut">Logg ut</string>
    <string name="str_turnavn_tittel">Turnavn / Tittel:</string>
    <string name="str_turnnavn">Turnnavn</string>
    <string name="str_dato_for_tur">Dato for tur</string>
    <string name="str__dato">00.00.0000</string>
    <string name="str_estimert_dager">Estimert dager</string>
    <string name="str_estimerte_timer">Estimerte timer</string>
    <string name="str_fottur">Gåtur</string>
    <string name="str_sykkeltur">Sykkeltur</string>
    <string name="str_skitur">Skitur</string>
    <string name="str_velg_tur_p_kart">Gå til kart</string>
    <string name="str_todo">Bilde description</string>
    <string name="str_0">0</string>
    <string name="profil_text">Her kan du logge deg ut eller slette brukeren din.</string>

    <string name="menu_delete">Slett rute</string>
    <string name="menu_viapoint">Legg til viapunkt</string>

    <string name="location_permission_denied">Kunne ikke få tilganger</string>
    <string name="location_permission_allowed">Tilgang akseptert</string>
    <string name="str_bildetekst_uri">Bildetekst - URI</string>
    <string name="finn_turer_i_n_rheten">Finn turer i nærheten</string>
    <string name="tittel">Tittel</string>
    <string name="se_lagrede_bilder">Se lagrede bilder</string>
    <string name="tid_brukt">Tid brukt:</string>
    <string name="dato">Dato:</string>
    <string name="slett_tur">Slett tur</string>
    <string name="skriv_en_kommentar_her">Skriv en kommentar her</string>
    <string name="str_IngenBilder">Ingen bilder tilhørende </string>
    <string name="str_IngenBilder1">denne turen!</string>

</resources>