<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newTourFragment"
        android:title="@string/str_ny_tur"
        android:icon="@drawable/ic_action_addtour"
        app:showAsAction="always"/>

    <item
        android:id="@id/myToursFragment"
        android:title="@string/str_mine_turer"
        android:icon="@drawable/ic_baseline_history_24"
        app:showAsAction="always"/>

    <item
        android:id="@id/myProfileFragment"
        android:title="@string/str_min_profil"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="always"/>

    <item
        android:id="@id/settingsFragment"
        android:title="@string/str_innstillinger"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always"/>
</menu>
