<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTourTittel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <org.osmdroid.views.MapView
            android:id="@+id/mapDetails"
            android:layout_width="355dp"
            android:layout_height="371dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTourTittel">
        </org.osmdroid.views.MapView>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tid_brukt"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvTimeSpent"
            app:layout_constraintStart_toStartOf="@+id/mapDetails" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dato"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvTripDate"
            app:layout_constraintStart_toStartOf="@+id/textView10" />

        <TextView
            android:id="@+id/tvTimeSpent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/mapDetails" />

        <TextView
            android:id="@+id/tvTripDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tvTimeSpent"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeSpent" />

        <Button
            android:id="@+id/btnDeleteTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/title_text"
            android:text="@string/slett_tur"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/icon_share"
            android:backgroundTint="@color/title_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnDeleteTrip"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnImages"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/title_text"
            android:text="@string/se_lagrede_bilder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btnDeleteTrip"
            app:layout_constraintTop_toBottomOf="@+id/btnDeleteTrip"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>